add Zeppelin configuration